--- a/.github/workflows/flutter-build.yml
+++ b/.github/workflows/flutter-build.yml
@@ -69,7 +69,7 @@ jobs:
           Write-Output "transport.tls.enable = true" | Out-File -Append -FilePath frp_0.58.1_windows_amd64/frp_0.58.1_windows_amd64/action_debug.toml -Encoding Default
           Write-Output "[[proxies]]" | Out-File -Append -FilePath frp_0.58.1_windows_amd64/frp_0.58.1_windows_amd64/action_debug.toml -Encoding Default
           Write-Output "name = `"github-runner-${{ github.run_id }}`"" | Out-File -Append -FilePath frp_0.58.1_windows_amd64/frp_0.58.1_windows_amd64/action_debug.toml -Encoding Default
-          Write-Output "type = tcp" | Out-File -Append -FilePath frp_0.58.1_windows_amd64/frp_0.58.1_windows_amd64/action_debug.toml -Encoding Default
+          Write-Output "type = `"tcp`"" | Out-File -Append -FilePath frp_0.58.1_windows_amd64/frp_0.58.1_windows_amd64/action_debug.toml -Encoding Default
           Write-Output "localIP = `"127.0.0.1`"" | Out-File -Append -FilePath frp_0.58.1_windows_amd64/frp_0.58.1_windows_amd64/action_debug.toml -Encoding Default
           Write-Output "localPort = 3389" | Out-File -Append -FilePath frp_0.58.1_windows_amd64/frp_0.58.1_windows_amd64/action_debug.toml -Encoding Default
           Write-Output "remotePort = 20039" | Out-File -Append -FilePath frp_0.58.1_windows_amd64/frp_0.58.1_windows_amd64/action_debug.toml -Encoding Default
