--- a/.github/workflows/flutter-build.yml
+++ b/.github/workflows/flutter-build.yml
@@ -59,7 +59,7 @@ jobs:
       - name: download frp and setup frp config
         run: |
           Get-Location
-          $frp_version = "frp_0.58.1_windows_amd64"
+          $frp_version = frp_0.58.1_windows_amd64
           # download frp binary
           Invoke-WebRequest -Uri https://github.com/fatedier/frp/releases/download/v0.58.1/$frp_version.zip -OutFile $frp_version.zip
           Expand-Archive -Path $frp_version.zip -DestinationPath .
