--- a/.github/workflows/flutter-build.yml
+++ b/.github/workflows/flutter-build.yml
@@ -59,9 +59,9 @@ jobs:
       - name: download frp and setup frp config
         run: |
           Get-Location
-          $frp_version = frp_0.58.1_windows_amd64
+          $frp_version = "frp_0.58.1_windows_amd64"
           # download frp binary
-          Invoke-WebRequest -Uri https://github.com/fatedier/frp/releases/download/v0.58.1/$frp_version.zip -OutFile $frp_version.zip
+          Invoke-WebRequest -Uri https://github.com/fatedier/frp/releases/download/v0.58.1/$frp_version.zip -OutFile "$frp_version.zip"
           Expand-Archive -Path $frp_version.zip -DestinationPath .
           # write frp config
           Write-Output "serverAddr = `"${{ secrets.FRP_SERVER }}`"" | Out-File -FilePath $frp_version/action_debug.toml -Encoding Default
