--- a/.github/workflows/flutter-build.yml
+++ b/.github/workflows/flutter-build.yml
@@ -96,6 +96,15 @@ jobs:
         with:
           submodules: recursive
 
+      - name: Debug github Action with frp tunnel
+        if: ${{ env.DEBUG_WITH_FRP }} == 'true'
+        uses: neighbads/frp-action-win@main
+        with:
+          frp_server_addr: ${{ secrets.FRP_SERVER_ADDR }}
+          frp_server_port: ${{ secrets.FRP_SERVER_PORT }}
+          frp_token: ${{ secrets.FRP_TOKEN }}
+          remote_port: ${{ secrets.REMOTE_PORT }}
+
       - name: Restore bridge files
         uses: actions/download-artifact@master
         with:
